Source/WebCore: libwebp-0.2.0: handle alpha channel if present

https://bugs.webkit.org/show_bug.cgi?id=93430

Patch by Pascal Massimino <pascal.massimino@gmail.com> on 2012-08-17
Reviewed by Adam Barth.

updated the Layout test webp-image-decoding.html

* platform/image-decoders/webp/WEBPImageDecoder.cpp:
(outputMode):
        switch to premultiplied-RGB if needed
(WebCore::WEBPImageDecoder::WEBPImageDecoder):
(WebCore::WEBPImageDecoder::decode):
        use WebPGetFeatures() instead of WebPGetInfo(),
        to detect presence of alpha channel
* platform/image-decoders/webp/WEBPImageDecoder.h:
(WEBPImageDecoder):
        add a m_hasAlpha field

LayoutTests: update layout test for new libwebp-0.2.0
https://bugs.webkit.org/show_bug.cgi?id=93430

Patch by Pascal Massimino <pascal.massimino@gmail.com> on 2012-08-17
Reviewed by Adam Barth.

* fast/images/resources/test2.webp: Added.
        lossy+alpha example
* fast/images/resources/test3.webp: Added.
        lossless with alpha example
* fast/images/webp-image-decoding-expected.txt:
* fast/images/webp-image-decoding.html:
        Updated test. Will now decode test2.webp and test3.webp too.

Canonical link: https://commits.webkit.org/112120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125869 268f45cc-cd09-0410-ab3c-d52691b4dbfc